# education

./: .gitignore  Dockerfile  README.md  db.json  docker-compose.yml  example.env  pyproject.toml  r.txt
app/: .gitignore  Dockerfile  pyproject.toml
app/chat/: consumers.py  urls.py  views.py
app/courses/: forms.py  views.py
app/courses/api/: urls.py
app/education_platform/: settings.py
app/students/: urls.py  views.py
app/users/: forms.py
chat/: routing.py  views.py
courses/: admin.py  fields.py  forms.py  models.py  urls.py  views.py
courses/api/: permissions.py  urls.py  views.py
courses/static/css/: style.css
courses/templates/: base.html  error.html
courses/templatetags/: course.py
docker/nginx/: education.conf
education/: db.json  gunicorn.py
education/courses/: admin.py  forms.py  models.py  urls.py  views.py
education/education_platform/: asgi.py  settings.py  urls.py
education/students/: urls.py  views.py
education/users/: forms.py  views.py
education_platform/: asgi.py  settings.py  urls.py  views_core.py
education_platform/conf/: local.py  prod.py
media/files/: 00._Введение.docx  01._Общие_положения.docx  02._Константы.docx  03._Справочники.docx  04._Перечисление_SRNzwZF.docx  05._Элементы_управления_формы.docx  06._Обработчик_события.docx  07._Документ.docx  08._Функциональные_опции.docx  09._Подсистемы_и_интерфейс.docx  10._Регистр_сведений.docx  11._Запрос.docx  12._Отчет._Компоновка_данных.docx
static/css/: style.css
students/: urls.py  views.py
users/: forms.py  views.py
users/migrations/: 0001_initial.py
(+54 files in other folders)
