[tool.poetry]
name = "education"
version = "0.1.0"
description = ""
authors = ["Zakhy <lirchzakhar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-braces = "^1.15"
django-embed-video = "^1.4"
django-redisboard = "^8.4"
djangorestframework = "^3.15"
django-debug-toolbar = "^4.3"
channels = "^4.0.0"
daphne = "^4.1.0"
channels-redis = "^4.2.0"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
gevent = "^24.2.1"
django-froala-editor = "^4.2.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
