[project]
name = "education"
version = "0.1.0"
description = ""
authors = [
    {name = "Zakhy", email = "lirchzakhar@gmail.com"},
]
dependencies = [
    "django>=4.2,<5.0",
    "django-braces>=1.15,<2.0",
    "django-embed-video>=1.4,<2.0",
    "django-redisboard>=8.4,<9.0",
    "djangorestframework>=3.15,<4.0",
    "django-debug-toolbar>=4.3,<5.0",
    "channels>=4.0.0,<5.0.0",
    "daphne>=4.1.0,<5.0.0",
    "channels-redis>=4.2.0,<5.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",  # ← ИЗМЕНЕНО
    "gunicorn>=21.2.0,<22.0.0",
    "gevent>=24.2.1,<25.0.0",
    "django-froala-editor>=4.2.0,<5.0.0",
    "pytils>=0.4.1,<0.5.0",
    "django-ckeditor-5>=0.2.13,<0.3.0",
    "fontawesomefree>=6.5.1,<7.0.0",
]
requires-python = ">=3.10"

